# hbricks

./: CMakeLists.txt  Game.c  Game.h  GameInteral.h  GameInternal.h  LogView.c  LogView.h  Polyfill.h  README.md  StrBuf.c  StrBuf.h  Tweak.h  View.h  main.cxx
Apps/: GDI+.cxx  Text.c
Behavior/: Emit.h  Extra.h  Game.h  View.h
Game/: Normal.c  Normal.h
Lib/: Polyfill.h  StrBuf.c  StrBuf.h
Lib/Behavior/: Emit.h  Extra.h  Game.h  View.h
Misc/: Behavior.md  Convention.md
Platform/GDI+/: App.cxx  View.cxx  View.h
Platform/Text/: App.c  Emit.c  Emit.h  View.c  View.h
Test/: CMakeLists.txt  GameTest.cxx  LogView.c  LogView.h  NormalGameTest.cxx  StrBufTest.cxx  TestGame.cxx
Tests/: CMakeLists.txt  TestGame.cxx
Views/: GDI+.cxx  GDI+.h  Log.c  Log.h  Text.c  Text.h
